--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
-
+#vscode
+*.vscode
 # Env
 *.env
 #Exe
