crash alerts via email added

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,11 @@
-DB_HOST= "localhost"
+DB_HOST= "host.docker.internal" OR "localhost" 
 DB_PORT= 5432
 DB_USERNAME= "postgres"
 DB_PASSWORD= "12345678"
 DB_NAME= "storedb"
+
+# Env for crash alert emails
+MAIL_USER="test@gmail.com"
+MAIL_PASS="******"
+MAIL_FROM="test@gmail.com"
+MAIL_TO="test@gmail.com
